merge project library files into one JAR to reduce app classloading time (package index building, opened file descriptors, reading ZIP file central directory)
GitOrigin-RevId: a474a8f60fc1c8d04267260bc475c2b9f7bfd75b